tests/snapshots/tests__standard@anonymous-function-internal-comments.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
-- https://github.com/JohnnyMorganz/StyLua/issues/627
t = t or function()
	print("Hello, World") -- comment
end

t = t or function()
	print("Hello, World")
end

