tests/snapshots/tests__standard@anonymous-function.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local foo = function(bar, baz)
	print(foo)
end
call(function(x, y)
	local x = test
end)

