tests/snapshots/tests__standard@assignment-comments.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local isValid =
	-- Allow nil for conditional declaration
	contextType == nil or (contextType["$$typeof"] == REACT_CONTEXT_TYPE and contextType._context == nil) -- Not a <Context.Consumer>

local isValid = -- Allow nil for conditional declaration
	foo

local isValid = -- test comment
	-- Allow nil for conditional declaration
	contextType == nil or (contextType["$$typeof"] == REACT_CONTEXT_TYPE and contextType._context == nil) -- Not a <Context.Consumer>

