tests/snapshots/tests__standard@assignment.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local foo = "bar"
local bar, baz = 1, 2

