tests/snapshots/tests__standard@block-empty-lines.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
function foo()
	local x = 1

	return true
end

function bar()
	return
end

do
	-- comment
	local x = 1

	local foo = bar

	-- comment
end

