tests/snapshots/tests__standard@comments-function-args.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
foo( -- comment
	baz
)

foo(
	baz, -- comment
	bar
)

foo(
	baz,
	-- comment
	bar
)

foo(
	baz,
	bar -- comment
)

foo(baz, bar) -- comment

foo(
	-- comment
	baz,
	bar
)

