tests/snapshots/tests__standard@comments-function-params.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
function sayHello(
	name, -- YourName
	foo, --baz
	greeting -- Message
)
	return greeting .. ", " .. name
end

