tests/snapshots/tests__standard@comments-indented-block.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
function foo()
	local x = 1
	local y = 1

	-- comment
end

if foo then
	local x = 1
	-- comment
end

